# sfml-platform

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: Entity.hpp  EntityManager.cpp  EntityManager.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp
src/Components/: SpriteComponent.cpp  SpriteComponent.hpp
src/Interfaces/: Component.hpp  Entity.hpp
